--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,15 @@ authors = ["Jason Reilly <jdr0887@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-csv = "1.1.1"
-env_logger = "^0.10"
-humantime = "^2.1"
-image = "^0.24"
+env_logger = "^0.9"
+futures = "^0.3"
+hyper = { version = "^0.14", features = ["full"] }
+hyper-tls = "^0.5"
 itertools = "^0.10"
-lazy_static = "1.4.0"
 log = { version = "^0.4", features = ["std"] }
-rayon = "1.3.0"
-regex = "^1.7"
-rocket = { version = "=0.5.0-rc.3", features = ["json"] }
-serde = { version = "^1.0", features = ["derive"] }
+rocket = { version = "0.5.0-rc.2", features = ["json", "http2"] }
+rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
+serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
 
