--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
 serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
+serde_with = { version = "^2.3", features = ["std", "macros", "json"] }
 
