--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "CQS-rs"
+name = "cqs-rs"
 version = "0.2.0"
 authors = ["Jason Reilly <jdr0887@gmail.com>"]
 edition = "2021"
@@ -17,4 +17,5 @@ serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
 serde_with = { version = "^2.3", features = ["std", "macros", "json"] }
+trapi-model-rs = { git = "https://github.com/jdr0887/trapi-model-rs.git" }
 
