--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
 serde_with = { version = "^2.3", features = ["std", "macros", "json"] }
-trapi-model-rs = { git = "https://github.com/jdr0887/trapi-model-rs.git" }
+trapi-model-rs = { git = "https://github.com/jdr0887/trapi-model-rs.git", tag = "v1.4.0" }
 
