response url to the openapi servers

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ WORKFLOW_RUNNER_URL="https://translator-workflow-runner.renci.org"
 SCHEMA_VERSION="1.4.0"
 RUST_LOG="info,rocket=debug,launch=debug"
 RESPONSE_URL_ROOT="http://localhost:8000"
+#RESPONSE_URL_ROOT="https://cqs-dev.apps.renci.org/v0.1"
