--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 DATABASE_URL="postgres://postgres:asdfasdf@localhost/cqs"
 PATH_WHITELIST="d"
 WORKFLOW_RUNNER_URL="https://translator-workflow-runner.renci.org"
+MATURITY="development"
 SCHEMA_VERSION="1.4.0"
 RUST_LOG="info,rocket=debug,launch=debug"
 RESPONSE_URL_ROOT="http://localhost:8000"
