--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,11 @@
-DATABASE_URL="postgres://postgres:asdfasdf@localhost/cqs"
 PATH_WHITELIST="d"
 WORKFLOW_RUNNER_URL="https://translator-workflow-runner.renci.org"
 MATURITY="development"
 SCHEMA_VERSION="1.4.0"
 RUST_LOG="info,rocket=debug,launch=debug"
-RESPONSE_URL_ROOT="http://localhost:8000"
-#RESPONSE_URL_ROOT="https://cqs-dev.apps.renci.org/v0.1"
+RESPONSE_URL="http://localhost:8000"
+#RESPONSE_URL="https://cqs-dev.apps.renci.org/v0.1"
+POSTGRES_DB=cqs
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=asdfasdf
+POSTGRES_SERVER=localhost
