adding port expose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
     build: .
     restart: always
     env_file: .env
+    expose:
+      - 8000
     ports:
         - 8000:8000
     volumes:
