defaulting user to cqs and changing default password

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,6 @@ RUST_LOG="info,rocket=debug,launch=debug"
 RESPONSE_URL="http://localhost:8000"
 #RESPONSE_URL="https://cqs-dev.apps.renci.org/v0.1"
 POSTGRES_DB=cqs
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=asdfasdf
+POSTGRES_USER=cqs
+POSTGRES_PASSWORD=changeme
 POSTGRES_SERVER=localhost
