--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
     ports:
         - 8000:8000
     volumes:
+#        - /tmp/cqs:/tmp/cqs
         - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
         - cqs-pg-db
