--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,9 +24,8 @@ services:
     expose:
       - 8000
     ports:
-        - 8000:8000
+      - "8000:8000"
     volumes:
-#        - /tmp/cqs:/tmp/cqs
-        - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp/cqs:/tmp/cqs
     depends_on:
-        - cqs-pg-db
+      - cqs-pg-db
