upgrading hyper, adding itertools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,15 @@ diesel_migrations = "^2.0"
 dotenvy = "^0.15"
 env_logger = "^0.10"
 futures = "^0.3"
-hyper = { version = "0.14.26", features = ["client", "http1", "stream", "tcp"] }
-itertools = "^0.11"
+hyper = { version = "^0.14", features = ["client", "http1", "stream", "tcp"] }
+itertools = "^0.12"
 lazy_static = "^1.4"
 log = { version = "^0.4", features = ["std"] }
 merge-hashmap = { version = "0.1.2", features = ["default", "merge_derive-hashmap"] }
+ordered-float = "^4.2"
 reqwest = { version = "^0.11", features = ["default", "json"] }
-rocket = { version = "0.5.0-rc.2", features = ["json", "http2"] }
-rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
+rocket = { version = "^0.5.0-rc.3", features = ["json", "http2"] }
+rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
 serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
