--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ log = { version = "^0.4", features = ["std"] }
 merge-hashmap = { version = "0.1.2", features = ["default", "merge_derive-hashmap"] }
 ordered-float = "^4.2"
 reqwest = { version = "^0.11", features = ["default", "json"] }
-rocket = { version = "^0.5.0-rc.3", features = ["json", "http2"] }
-rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
+rocket = { version = "^0.5.0", features = ["json", "http2"] }
+rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
 serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
 serde_json = "^1.0"
