--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.8"
 authors = ["Jason Reilly <jdr0887@gmail.com>"]
 edition = "2021"
 keywords = ["ARA", "curated", "query", "service"]
+default-run = "cqs-rs"
 
 [dependencies]
 chrono = { version = "^0.4", features = ["serde"]}
@@ -16,6 +17,7 @@ futures = "^0.3"
 hyper = { version = "^0.14", features = ["client", "http1", "stream", "tcp"] }
 itertools = "^0.12"
 lazy_static = "^1.4"
+liquid = "^0.26"
 log = { version = "^0.4", features = ["std"] }
 merge-hashmap = { version = "0.1.2", features = ["default", "merge_derive-hashmap"] }
 ordered-float = "^4.2"
@@ -24,7 +26,7 @@ rocket = { version = "^0.5.0", features = ["json", "http2"] }
 rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
 serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
-serde_json = "^1.0"
+serde_json = { version = "^1.0", features = ["std", "preserve_order"] }
 serde_yaml = "^0.9"
 serde_with = { version = "^3.1", features = ["std", "macros", "json"] }
 tokio = { version = "1.28.2", features = ["full"]}
