--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ clap = { version = "^4.3", features = ["derive"] }
 diesel = { version = "^2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
 diesel_migrations = "^2.0"
 dotenvy = "^0.15"
-env_logger = "^0.10"
+env_logger = "^0.11"
 futures = "^0.3"
 hyper = { version = "^0.14", features = ["client", "http1", "stream", "tcp"] }
 itertools = "^0.12"
@@ -26,7 +26,7 @@ rocket = { version = "^0.5.0", features = ["json", "http2"] }
 rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
 serde = { version = "^1.0", features = ["derive", "serde_derive"] }
 serde_derive = "^1.0"
-serde_json = { version = "^1.0", features = ["std", "preserve_order"] }
+serde_json = "^1.0"
 serde_yaml = "^0.9"
 serde_with = { version = "^3.1", features = ["std", "macros", "json"] }
 tokio = { version = "1.28.2", features = ["full"]}
