--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
     ports:
       - "5432:5432"
 
-  callback-app:
-    container_name: callback-app
+  callback-test-app:
+    container_name: callback-test-app
     image: ghcr.io/translatorsri/callback-test-app:0.1.0
     expose:
       - 8008
@@ -37,5 +37,5 @@ services:
       - /tmp/cqs:/tmp/cqs
     depends_on:
       - cqs-pg-db
-      - callback-app
+      - callback-test-app
 
