--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 WORKFLOW_RUNNER_URL="https://translator-workflow-runner.renci.org"
 MATURITY="development"
 SCHEMA_VERSION="1.4.0"
+LOCATION="RENCI"
 RUST_LOG="info,rocket=debug,launch=debug"
 RESPONSE_URL="http://localhost:8000"
 POSTGRES_DB=cqs
