--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ keywords = ["ARA", "curated", "query", "service"]
 default-run = "cqs-rs"
 
 [dependencies]
+async_once = "0.2.6"
+bb8 = "^0.8"
+bb8-diesel = "^0.2"
 chrono = { version = "^0.4", features = ["serde"]}
 clap = { version = "^4.3", features = ["derive"] }
 diesel = { version = "^2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
-diesel_migrations = "^2.0"
+diesel-async = { version = "^0.4", features = ["bb8", "postgres"] }
+diesel_migrations = "^2.1"
 dotenvy = "^0.15"
 env_logger = "^0.11"
 futures = "^0.3"
@@ -21,7 +25,7 @@ liquid = "^0.26"
 log = { version = "^0.4", features = ["std"] }
 merge-hashmap = { version = "0.1.2", features = ["default", "merge_derive-hashmap"] }
 ordered-float = "^4.2"
-reqwest = { version = "^0.11", features = ["default", "json"] }
+reqwest = { version = "^0.12", features = ["default", "json"] }
 rocket = { version = "^0.5.0", features = ["json", "http2"] }
 rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
 serde = { version = "^1.0", features = ["derive", "serde_derive"] }
