incrementing to trapi 1.5.0

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 WORKFLOW_RUNNER_URL="https://translator-workflow-runner.renci.org"
 MATURITY="development"
-SCHEMA_VERSION="1.4.0"
+TRAPI_VERSION="1.5.0"
 LOCATION="RENCI"
 RUST_LOG="info,rocket=debug,launch=debug"
 RESPONSE_URL="http://localhost:8000"
