--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ liquid = "^0.26"
 log = { version = "^0.4", features = ["std"] }
 merge-hashmap = { version = "^0.1", features = ["default", "merge_derive-hashmap"] }
 ordered-float = "^4.2"
+regex = "^1.10"
 reqwest = { version = "^0.12", features = ["default", "json"] }
 rocket = { version = "^0.5.0", features = ["json", "http2"] }
 rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
