changing env var

--- a/.env.sample
+++ b/.env.sample
@@ -8,4 +8,4 @@ POSTGRES_DB=cqs
 POSTGRES_USER=cqs
 POSTGRES_PASSWORD=changeme
 POSTGRES_SERVER=localhost
-WRITE_WFR_OUTPUT=false
+WFR_OUTPUT_DIR=/tmp/cqs
