initial update for otel addition

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 WORKFLOW_RUNNER_URL="https://translator-workflow-runner.renci.org"
 MATURITY="development"
 TRAPI_VERSION="1.5.0"
+BIOLINK_VERSION="3.1.2"
 LOCATION="RENCI"
 RUST_LOG="info,rocket=debug,launch=debug"
 RESPONSE_URL="http://localhost:8000"
@@ -9,3 +10,7 @@ POSTGRES_USER=cqs
 POSTGRES_PASSWORD=changeme
 POSTGRES_SERVER=localhost
 WFR_OUTPUT_DIR=/tmp/cqs
+OTEL_ENABLED=false
+JAEGER_HOST=localhost
+JAEGER_PORT=6831
+
