--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,5 @@ strum = "^0.26"
 tokio = { version = "1.28.2", features = ["full"] }
 trapi-model-rs = { git = "https://github.com/jdr0887/trapi-model-rs.git" }
 uuid = { version = "^1.4", features = ["v4"] }
+urlencoding = "2.1.3"
 strum_macros = "0.26.4"
